feat(front): :sparkles: create apiclient context without testing
