# front/api/auth/$api.ts
@@ -1,0 +1,35 @@
+/* eslint-disable */
+// prettier-ignore
+import { AspidaClient, BasicHeaders } from 'aspida'
+// prettier-ignore
+import { Methods as Methods0 } from './refresh_token'
+
+// prettier-ignore
+const api = <T>({ baseURL, fetch }: AspidaClient<T>) => {
+  const prefix = (baseURL === undefined ? '' : baseURL).replace(/\/$/, '')
+  const PATH0 = '/auth/refresh_token'
+  const GET = 'GET'
+
+  return {
+    refresh_token: {
+      /**
+       * Refresh Token
+       * @returns successfully authorized
+       */
+      get: (option?: { config?: T }) =>
+        fetch<Methods0['get']['resBody'], BasicHeaders, Methods0['get']['status']>(prefix, PATH0, GET, option).json(),
+      /**
+       * Refresh Token
+       * @returns successfully authorized
+       */
+      $get: (option?: { config?: T }) =>
+        fetch<Methods0['get']['resBody'], BasicHeaders, Methods0['get']['status']>(prefix, PATH0, GET, option).json().then(r => r.body),
+      $path: () => `${prefix}${PATH0}`
+    }
+  }
+}
+
+// prettier-ignore
+export type ApiInstance = ReturnType<typeof api>
+// prettier-ignore
+export default api
