# front/api/auth/refresh_token/index.ts
@@ -1,0 +1,11 @@
+/* eslint-disable */
+import type * as Types from '../../@types';
+
+export type Methods = {
+  /** Refresh Token */
+  get: {
+    status: 200;
+    /** successfully authorized */
+    resBody: Types.Auth;
+  };
+};
